# quantity-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  readme
basicapp/: CMakeLists.txt
basicapp/src/: main.cpp
common/: CMakeLists.txt  interface.cpp  interface.h  tier0.h  types.h
common/appframework/: appframework.cpp  appframework.h  application.cpp  application.h  system.h
common/filesystem/: file.cpp  file.h  filesystem.cpp  filesystem.h
common/platform/: platform.h
common/string/: stringutil.cpp  stringutil.h
filesystem/: CMakeLists.txt
filesystem/private/: cfile.cpp  cfile.h  cfilesystem.cpp
filesystem/public/: ifile.h  ifilesystem.h
media/: CMakeLists.txt
media/private/: cmedia.cpp  cwindow.cpp  cwindow.h
media/public/: imedia.h  iwindow.h
quantity2/: CMakeLists.txt
rendersystemgl/: CMakeLists.txt
rendersystemgl/private/: cgpubuffer.h  crenderpass.h  crendersystem.cpp  crenderworld.cpp  cshadersystem.cpp  ctexture.cpp  cvcache.h  idevice.h  igpuresource.h
rendersystemgl/public/: imesh.h  irendersystem.h  irenderworld.h  ishadersystem.h  itexture.h
